tests/diagnostics/tests/ui/not_a_recipe.stderr
error[E0277]: `NotARecipe` is not a recipe of `ButtonTag`
  --> tests/ui/not_a_recipe.rs:16:18
   |
16 |     let _button: HtmlButton<(SomeRecipe, NotARecipe)> = HtmlButton::from_recipe();
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ all recipes must implement `ButtonTag`
   |
help: the trait `granola::html::ButtonTag` is not implemented for `NotARecipe`
  --> tests/ui/not_a_recipe.rs:13:1
   |
13 | struct NotARecipe;
   | ^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `granola::html::ButtonTag`:
             ()
             (A, B)
             SomeRecipe
             granola::recipes::Button
             granola::recipes::Dialog
             granola::recipes::Get
             granola::recipes::Post
             granola::recipes::Reset
             granola::recipes::Submit
   = note: required for `(SomeRecipe, NotARecipe)` to implement `granola::html::ButtonTag`
note: required by a bound in `granola::html::HtmlButton`
  --> $WORKSPACE/crates/granola/src/html/elements/forms/button.rs
   |
   | pub struct HtmlButton<R: ButtonTag = ()> {
   |                          ^^^^^^^^^ required by this bound in `HtmlButton`

error[E0277]: `NotARecipe` is not a recipe of `ButtonTag`
  --> tests/ui/not_a_recipe.rs:16:57
   |
16 |     let _button: HtmlButton<(SomeRecipe, NotARecipe)> = HtmlButton::from_recipe();
   |                                                         ^^^^^^^^^^ all recipes must implement `ButtonTag`
   |
help: the trait `granola::html::ButtonTag` is not implemented for `NotARecipe`
  --> tests/ui/not_a_recipe.rs:13:1
   |
13 | struct NotARecipe;
   | ^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `granola::html::ButtonTag`:
             ()
             (A, B)
             SomeRecipe
             granola::recipes::Button
             granola::recipes::Dialog
             granola::recipes::Get
             granola::recipes::Post
             granola::recipes::Reset
             granola::recipes::Submit
   = note: required for `(SomeRecipe, NotARecipe)` to implement `granola::html::ButtonTag`
note: required by a bound in `granola::html::HtmlButton`
  --> $WORKSPACE/crates/granola/src/html/elements/forms/button.rs
   |
   | pub struct HtmlButton<R: ButtonTag = ()> {
   |                          ^^^^^^^^^ required by this bound in `HtmlButton`
